# ChessEngine

./: README.md  bishop_attacks.cpp  magic.cpp  pawn_attacks.cpp  sliders.cpp
Headers/: bitboard.hpp  pawn_attacks.hpp
src/: CMakeLists.txt  bitboard.cpp  game.cpp  king_attacks.cpp  knight_attacks.cpp  main.cpp  piece_bitboard.cpp  rook_attacks.cpp
src/Headers/: bishop_attacks.hpp  bitboard.hpp  game.hpp  king_attacks.hpp  knight_attacks.hpp  magic.hpp  piece_bitboard.hpp  rook_attacks.hpp  sliders.hpp
src/Magic_Number_Generation/: magic.cpp
src/Piece_Attacks/: bishop_attacks.cpp  king_attacks.cpp  knight_attacks.cpp  pawn_attacks.cpp  rook_attacks.cpp  sliders.cpp
